# sleeep

./: .gitignore  README.md  README_pdf_ingest.md  SKILL.md
00_项目总览与导航/: 00_academic_workflow_总导航.md  00_科研10板块分类导航.md  SKILL.md  research_roadmap.md  start_claude_academic_workflow.bat
00_项目总览与导航/选题讨论/: README_选题Prompt速查.md
01_读_论文阅读与复盘/: 2.md  README.md
01_读_论文阅读与复盘/00_core_scripts/: README.md  _shared_constants.py  (+9 more)
02_作图与分析/: README.md
02_作图与分析/01_作图/QGIS-MCP-Server/mcp_server/: pyproject.toml
02_作图与分析/01_作图/QGIS-MCP-Server/mcp_server/src/qgis_mcp/: bridge.py  server.py
03_写_论文写作/: README.md  README_速查.md  SKILL.md
04_组会PPT/: CLAUDE.md  README.md
05_选题与问题库/: README.md  gap_detector.py  毕业要求_学位论文与发表论文.md  选题证据卡模板.md
07_方法与代码库/: README.md  project_quality_gate.py  地理研究项目模板.md  方法库索引.md
agents/: openai.yaml
config/: environment_template.json  paper_grading_config.json  paths.json  schema_validator.py
knowledge_graph/: __init__.py  __main__.py  cli.py  kg_config.py  kg_health.py  kg_hook.py  kg_schema.py  隐私来源策略.md
pdf_ingest/: README.md  __init__.py  batch_report.py  import_manual_claude.py  ingest_pdf.py  quality_report.py
prompts/: academic_prompt_encyclopedia_personalized.md  figure_planning_gis_prompt.md  paper_filter_luomingliang_direction_prompt.md  paper_reading_gis_nature_prompt.md
references/: daily-paper-reading.md  knowledge-card.md  paper-grading.md
scripts/: README.md  build_public_release.py  daily_paper_curator.py  fulltext_utils.py  import_claude_paper_reading.py  ingest_pdf.py  paper_source_utils.py  run_paper_curator.bat
(+305 files in other folders)
