[project]
name = "qgis-mcp"
version = "0.1.0"
description = "MCP server that drives a running QGIS Desktop session via a paired bridge plugin."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
]

[project.scripts]
qgis-mcp = "qgis_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qgis_mcp"]
